(Format: Year/Month/Day)
Changes for 0.9.10:
*04/08/26:
  * Make arrow in toolbar buttons scalable size (Simon)
    - new theme item: toolbar.button.scale:  <number>
      The number is a scale factor, which is divided into 100 to give
      the size relative to the button. 100 gives a arrow the same size 
      as button, 200 gives half the size, 300 a third, etc.
    - default is now 300, not 200
    - also fix size balance with left/right arrows
    ArrowButton.hh/cc ButtonTheme.hh/cc ButtonTool.cc FbTk/Button.hh
  * Fixed 2 possible Memleaks (Mathias)
    Ewmh.cc
  * Re-implement bevels in toolbar, plus numerous toolbar-related theme
    fixes => old styles now look like they used to! (Simon)
    Toolbar.cc ToolbarItem.h ToolTheme.cc ToolbarTheme.cc ToolFactory.cc
    ArrowButton.cc ButtonTheme.cc ClockTool.cc IconbarTheme.cc 
    IconbarTool.cc SystemTray.hh WorkspaceNameTool.cc
*04/08/25:
  * Fix to draw Cursors in Textboxes correctly again (Mathias)
    Font.cc
*04/08/22:
  * Preliminary basic support for icons in fluxbox-generate_menu (Han)
    - put a <progname>.xpm into ~/.fluxbox/icons. e.g. Eterm.xpm
    fluxbox-generate_menu.in
*04/08/19:
  * Fixes to make nroff not report errors for fbsetbg.1 (Han)
    fbsetbg.1
*04/08/18:
  * Fix handling of font encodings, and related bugs (Simon)
    FbTk/Font.hh/cc fluxbox.cc
*04/08/17:
  * New manpage for startfluxbox (Han)
    startfluxbox.1
*04/08/13:
  * Fixed slow resize of windows like xmms playlist.
    We called setupWindow() in XA_WM_NORMAL_HINTS even if
    nothing was changed -> slow!.
    (Henrik)
    Window.cc
*04/08/12:
  * Moved fluxstyle.1 to fluxstyle.1.in and using regexp to 
    replace pkgdatadir
    (Thanks php-coder at ngs dot ru)
    doc/fluxstyle.1.in, doc/Makefile.am
*04/08/11:
  * Updated Cthulhain style for toolbar.workspace.*  
    and fixed a minor error in fluxbox.1.in
   (Thanks php-coder (php-coder at ngs dot ru)
  * Fixed bug: fbrun segfaults when history item is